# audio-jdm-dashboard

./: .env.example  .gitignore  Dockerfile  README.md  hml.py  main.py  pyproject.toml
wRE_dashboard/: run.py
wRE_dashboard/backend/: jira_sync.py  main.py  mongo_helper.py
wRE_dashboard/frontend/: app.jsx  base.js  bootstrap.js  index.html
