[project]
name = "audio-jdm-dashboard"
version = "0.0.11"

requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "python-dotenv",
  "openai",
  "requests",
  "jira",
  "keyring",
  "six",
  "dej-sdk>=1.0.17",
  "icalendar>=7.1.2",
]

[tool.uv]
index-url = "https://nexus.hedej.lge.com/repository/pypi-group/simple"
